--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -5,15 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PinusPengger.View"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="540" Width="960" ResizeMode="CanMinimize"
-        WindowStyle="None"
-        >
+        Title="Hotel Jaya Abadi - Login Page" Height="540" Width="960" ResizeMode="CanMinimize"
+        WindowStyle="None" MouseDown="DragApp">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="75"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="125"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions> 
             <ColumnDefinition Width="50"/>
@@ -39,7 +38,7 @@
                     <Path Data="{StaticResource CloseAppIcon}" Stretch="Uniform"
                           Fill="Black" Width="10" Height="10"
                           HorizontalAlignment="Center" VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5" Margin="1,0,0,0"></Path>
+                          RenderTransformOrigin="0.5,0.5" Margin="2,0,0,0"></Path>
                 </Grid>
             </Button>
         </StackPanel>
@@ -56,7 +55,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Label Grid.Row="1" Margin="0,0,0,0" FontWeight="Bold">Username</Label>
-                <Label Grid.Row="3" Margin="0,0,0,0" FontWeight="Bold">Password</Label>
+                <Label Grid.Row="3" Margin="0,0,0,0" FontWeight="Bold" >Password</Label>
                 <Label Grid.Row="0" Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontWeight="Bold" FontSize="16" FontFamily="Dubai">User Login</Label>
                 <TextBox Grid.Row="2" Height="25" Width="275" Text="Username"/>
                 <TextBox Grid.Row="4" Height="25" Width="275" Text="Password"/>
@@ -76,8 +75,7 @@
                 </Button>
             </Grid>
         </Border>
-        <Grid Grid.Row="0" MouseDown="DragApp">
-            
-        </Grid>
+        <Label FontSize="30" FontWeight="Bold" Grid.Column="2" Grid.Row="1" 
+               HorizontalAlignment="Center" VerticalAlignment="Center">Hotel Jaya Abadi</Label>
     </Grid>
 </Window>
