--- a/App.xaml
+++ b/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="/Style/Icons/LoginIcon.xaml"/>
                 <ResourceDictionary Source="/Style/Icons/MinimizeIcon.xaml"/>
                 <ResourceDictionary Source="/Style/Icons/CircleUserIcon.xaml"/>
+                <ResourceDictionary Source="/Style/Icons/MagnifyingGlassIcon.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
