--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PinusPengger"
+             xmlns:model="clr-namespace:PinusPengger.Model"
+             xmlns:view="clr-namespace:PinusPengger.View"
              xmlns:controller="clr-namespace:PinusPengger.Controller"
              StartupUri="/View/LoginWindow.xaml">
     <Application.Resources>
@@ -15,6 +17,8 @@
                 <ResourceDictionary Source="/Style/Icons/CircleUserIcon.xaml"/>
                 <ResourceDictionary Source="/Style/Icons/MagnifyingGlassIcon.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            
+            
             
         </ResourceDictionary>
     </Application.Resources>
