--- a/View/HistoryView2.xaml
+++ b/View/HistoryView2.xaml
@@ -1,14 +1,15 @@
-﻿<UserControl x:Class="PinusPengger.View.HistoryView"
+﻿<UserControl x:Class="PinusPengger.Controller.HistoryController"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PinusPengger.View"
+             xmlns:model="clr-namespace:PinusPengger.Model"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="300"/>
@@ -31,7 +32,7 @@
         <TextBox Grid.Row="2" Width="200" Height="20" HorizontalAlignment="Left" VerticalAlignment="Bottom"></TextBox>
         <DataGrid Grid.Row="3" Margin="10">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Kode Pemesanan"/>
+                <DataGridTextColumn Header="Kode Pemesanan" Binding="{Binding KodePemesanan}"/>
                 <DataGridTextColumn Header="Nama" Width="200" />
                 <DataGridTextColumn Header="Nomor Kamar" Width="*" />
                 <DataGridTextColumn Header="Tanggal Checkin" Width="*" />
