--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="PinusPengger.View.MainWindow"
+﻿<Window x:Class="PinusPengger.Controller.MainWindowController"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PinusPengger.View"
+        xmlns:view="clr-namespace:PinusPengger.View" 
+        xmlns:model="clr-namespace:PinusPengger.Model"
+        xmlns:controller="clr-namespace:PinusPengger.Controller"
         mc:Ignorable="d"
         Title="Hotel Jaya Abadi" Height="540" Width="960" ResizeMode="CanMinimize"
         WindowStyle="None">
+    <Window.DataContext>
+        <model:Reservation/>
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
@@ -15,6 +20,34 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Background="Gray" MouseDown="DragApp">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="1" HorizontalAlignment="Right"
+                    VerticalAlignment="Top" Margin="0,5,5,0"
+                    Orientation="Horizontal" FlowDirection="LeftToRight">
+                <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
+                    Background="Gold" Margin="0,0,5,0" BorderThickness="0" Click="MinimizeApp">
+                    <Grid>
+                        <Path Data="{StaticResource MinimizeIcon}" Stretch="Uniform"
+                          Fill="Black" Width="10" Height="10"
+                          HorizontalAlignment="Center" VerticalAlignment="Center"
+                          RenderTransformOrigin="0.5,0.5" Margin="1,0,0,0"></Path>
+                    </Grid>
+                </Button>
+                <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
+                    Background="Red" BorderThickness="0" Click="CloseApp">
+                    <Grid>
+                        <Path Data="{StaticResource CloseAppIcon}" Stretch="Uniform"
+                          Fill="Black" Width="10" Height="10"
+                          HorizontalAlignment="Center" VerticalAlignment="Center"
+                          RenderTransformOrigin="0.5,0.5" Margin="2,0,0,0"></Path>
+                    </Grid>
+                </Button>
+            </StackPanel>
+        </Grid>
         <Border Grid.Row="1">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -24,9 +57,13 @@
                 </Grid.ColumnDefinitions>
                 <Label FontSize="21" FontFamily="Leelawadee" Grid.Column="0"
                        HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold">Hotel Jaya Abadi</Label>
-                <StackPanel Grid.Column="1">
-                    <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}"
-                                 Content="Home" IsChecked="True"/>
+                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                    <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
+                                 Content="Home" Background="Gray" Margin="10,0,10,0" />
+                    <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
+                                 Content="Reservation" Background="Gray"/>
+                    <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
+                                 Content="History" Background="Gray" Margin="10,0,0,0"/>
                 </StackPanel>
                 <Button Grid.Column="5" Background="Transparent" BorderThickness="0">
                     <Grid Height="50" Width="125">
@@ -43,27 +80,8 @@
                 </Button>
             </Grid>
         </Border>
-        <StackPanel Grid.Row="0" Grid.Column="3" HorizontalAlignment="Right"
-                    VerticalAlignment="Top" Margin="0,5,5,0"
-                    Orientation="Horizontal" FlowDirection="LeftToRight">
-            <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
-                    Background="Gold" Margin="0,0,5,0" BorderThickness="0" Click="MinimizeApp">
-                <Grid>
-                    <Path Data="{StaticResource MinimizeIcon}" Stretch="Uniform"
-                          Fill="Black" Width="10" Height="10"
-                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5" Margin="1,0,0,0"></Path>
-                </Grid>
-            </Button>
-            <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
-                    Background="Red" BorderThickness="0" Click="CloseApp">
-                <Grid>
-                    <Path Data="{StaticResource CloseAppIcon}" Stretch="Uniform"
-                          Fill="Black" Width="10" Height="10"
-                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5" Margin="2,0,0,0"></Path>
-                </Grid>
-            </Button>
-        </StackPanel>
+        <TabControl Grid.Row="3">
+            
+        </TabControl>
     </Grid>
 </Window>
