--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -10,7 +10,7 @@
         Title="Hotel Jaya Abadi" Height="540" Width="960" ResizeMode="CanMinimize"
         WindowStyle="None">
     <Window.DataContext>
-        <model:Reservation/>
+        <controller:CoreController/>
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
@@ -59,11 +59,14 @@
                        HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold">Hotel Jaya Abadi</Label>
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
                     <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
-                                 Content="Home" Background="Gray" Margin="10,0,10,0" />
+                                 Content="Home" Background="Gray" Margin="10,0,10,0"
+                                 Command="{Binding HomeViewCommand}"/>
                     <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
-                                 Content="Reservation" Background="Gray"/>
+                                 Content="Reservation" Background="Gray"
+                                 Command="{Binding ReservasiViewCommand}"/>
                     <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
-                                 Content="History" Background="Gray" Margin="10,0,0,0"/>
+                                 Content="History" Background="Gray" Margin="10,0,0,0"
+                                 IsChecked="True" Command="{Binding HistoryViewCommand}"/>
                 </StackPanel>
                 <Button Grid.Column="5" Background="Transparent" BorderThickness="0">
                     <Grid Height="50" Width="125">
@@ -80,8 +83,8 @@
                 </Button>
             </Grid>
         </Border>
-        <TabControl Grid.Row="3">
+        <UserControl Grid.Row="3" Content="{Binding CurrentView}">
             
-        </TabControl>
+        </UserControl>
     </Grid>
 </Window>
