--- a/View/HistoryView2.xaml
+++ b/View/HistoryView2.xaml
@@ -3,10 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PinusPengger.View"
+             xmlns:controller="clr-namespace:PinusPengger.Controller"
              xmlns:model="clr-namespace:PinusPengger.Model"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
-             d:DesignHeight="420" d:DesignWidth="920">
+             d:DesignHeight="420" 
+             d:DesignWidth="920"
+             Loaded="OnLoaded">
+    <UserControl.Resources>
+        <controller:Ticker x:Key="ticker"/>
+    </UserControl.Resources>
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -24,23 +30,40 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Label Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">Tgl Sekarang</Label>
-                <Label Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">Jam Sekarang</Label>
+                <TextBlock x:Name="jamSkrg"
+                       Grid.Column="0"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Text="{Binding Source={StaticResource ticker},Path=Now, Mode=OneWay, StringFormat='dd MMMM yyyy  hh:mm:ss' }"/>
             </Grid>
         </Border>
-        <StackPanel Grid.Row="2" Margin="5,0,0,0">
-            <TextBlock Text="Masukkan Kode:" FontWeight="Bold"></TextBlock>
-            <StackPanel Height="30" Orientation="Horizontal">
-                <TextBox Width="200" Height="25" FontSize="20" Text="Kode"></TextBox>
-                <Button Height="25" Width="40">
-                    <Path Data="{StaticResource MagnifyingGlassIcon}" Grid.Column="1" Stretch="Uniform"
-                      Fill="Black" Width="15" Height="15" 
-                      HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,1" />
+        <StackPanel Grid.Row="2"
+                    Margin="5,0,0,0">
+            <TextBlock Text="Masukkan Kode:"
+                       FontWeight="Bold"/>
+            <StackPanel Height="30"
+                        Orientation="Horizontal">
+                <TextBox Width="200"
+                         Height="25"
+                         FontSize="18"
+                         Foreground="DarkGray"
+                         Text="Kode"/>
+                <Button Height="25"
+                        Width="40">
+                    <Path Data="{StaticResource MagnifyingGlassIcon}"
+                          Grid.Column="1"
+                          Stretch="Uniform"
+                          Fill="Black"
+                          Width="15"
+                          Height="15"
+                          HorizontalAlignment="Center"
+                          VerticalAlignment="Center"
+                          Margin="0,0,0,1" />
                 </Button>
             </StackPanel>
         </StackPanel>
         <ScrollViewer Grid.Row="3" Height="290">
-            <DataGrid Margin="10" Height="680">
+            <DataGrid x:Name="tabelHistori" Margin="10" Height="680">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Kode Pemesanan"/>
                     <DataGridTextColumn Header="Nama" Width="200" />
