--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -7,7 +7,10 @@
         xmlns:model="clr-namespace:PinusPengger.Model"
         xmlns:controller="clr-namespace:PinusPengger.Controller"
         mc:Ignorable="d"
-        Title="Hotel Jaya Abadi" Height="540" Width="960" ResizeMode="CanMinimize"
+        Title="Hotel Jaya Abadi" 
+        Height="540" 
+        Width="960" 
+        ResizeMode="CanMinimize"
         WindowStyle="None">
     <Window.DataContext>
         <controller:CoreController/>
@@ -19,30 +22,53 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="Gray" MouseDown="DragApp">
+        <Grid Grid.Row="0" 
+              Background="Gray" 
+              MouseDown="DragApp">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="1" HorizontalAlignment="Right"
-                    VerticalAlignment="Top" Margin="0,5,5,0"
-                    Orientation="Horizontal" FlowDirection="LeftToRight">
-                <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
-                    Background="Gold" Margin="0,0,5,0" BorderThickness="0" Click="MinimizeApp">
+            <StackPanel Grid.Column="1"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top" 
+                        Margin="0,5,5,0"
+                        Orientation="Horizontal" 
+                        FlowDirection="LeftToRight">
+                <Button Width="18"
+                        Height="18"
+                        Style="{StaticResource RoundedButton}"
+                        Background="Gold"
+                        Margin="0,0,5,0"
+                        BorderThickness="0"
+                        Click="MinimizeApp">
                     <Grid>
-                        <Path Data="{StaticResource MinimizeIcon}" Stretch="Uniform"
-                          Fill="Black" Width="10" Height="10"
-                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5" Margin="1,0,0,0"></Path>
+                        <Path Data="{StaticResource MinimizeIcon}"
+                              Stretch="Uniform"
+                              Fill="Black"
+                              Width="10" 
+                              Height="10"
+                              HorizontalAlignment="Center" 
+                              VerticalAlignment="Center"
+                              RenderTransformOrigin="0.5,0.5" 
+                              Margin="1,0,0,0"></Path>
                     </Grid>
                 </Button>
-                <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
-                    Background="Red" BorderThickness="0" Click="CloseApp">
+                <Button Width="18"
+                        Height="18"
+                        Style="{StaticResource RoundedButton}"
+                        Background="Red"
+                        BorderThickness="0"
+                        Click="CloseApp">
                     <Grid>
                         <Path Data="{StaticResource CloseAppIcon}" Stretch="Uniform"
-                          Fill="Black" Width="10" Height="10"
-                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5" Margin="2,0,0,0"></Path>
+                              Fill="Black"
+                              Width="10" 
+                              Height="10"
+                              HorizontalAlignment="Center" 
+                              VerticalAlignment="Center"
+                              RenderTransformOrigin="0.5,0.5"
+                              Margin="2,0,0,0"></Path>
                     </Grid>
                 </Button>
             </StackPanel>
@@ -54,30 +80,59 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="125"/>
                 </Grid.ColumnDefinitions>
-                <Label FontSize="21" FontFamily="Leelawadee" Grid.Column="0"
-                       HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold">Hotel Jaya Abadi</Label>
-                <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
-                                 Content="Home" Background="Gray" Margin="10,0,10,0"
+                <TextBlock FontSize="21"
+                       FontFamily="Leelawadee"
+                       Grid.Column="0"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" 
+                       FontWeight="Bold"
+                       Text="Hotel Jaya Abadi"/>
+                <StackPanel Grid.Column="1"
+                            Orientation="Horizontal">
+                    <RadioButton Height="40"
+                                 Width="100"
+                                 Style="{StaticResource NavbarButton}" 
+                                 Content="Home"
+                                 Background="Gray"
+                                 Margin="10,0,10,0"
                                  Command="{Binding HomeViewCommand}"/>
-                    <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
-                                 Content="Reservation" Background="Gray"
-                                 Command="{Binding ReservasiViewCommand}"/>
-                    <RadioButton Height="40" Width="100" Style="{StaticResource NavbarButton}" 
-                                 Content="History" Background="Gray" Margin="10,0,0,0"
-                                 IsChecked="True" Command="{Binding HistoryViewCommand}"/>
+                    <RadioButton Height="40"
+                                 Width="100"
+                                 Style="{StaticResource NavbarButton}" 
+                                 Content="Reservation"
+                                 Background="Gray"
+                                 Command="{Binding ReservationViewCommand}"/>
+                    <RadioButton Height="40"
+                                 Width="100"
+                                 Style="{StaticResource NavbarButton}" 
+                                 Content="History"
+                                 Background="Gray"
+                                 Margin="10,0,0,0"
+                                 IsChecked="True"
+                                 Command="{Binding HistoryViewCommand}"/>
                 </StackPanel>
-                <Button Grid.Column="5" Background="Transparent" BorderThickness="0">
+                <Button Grid.Column="5" 
+                        Background="Transparent"
+                        BorderThickness="0">
                     <Grid Height="50" Width="125">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="50"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <Path Data="{StaticResource CircleUserIcon}" Grid.Column="0" Stretch="Uniform" Fill="Black"
-                              HorizontalAlignment="Right" VerticalAlignment="Center"
-                              Width="30" Height="30" RenderTransformOrigin="0.5,0.5"></Path>
-                        <TextBlock Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
-                                   FontSize="21">User</TextBlock>
+                        <Path Data="{StaticResource CircleUserIcon}"
+                              Grid.Column="0"
+                              Stretch="Uniform"
+                              Fill="Black"
+                              HorizontalAlignment="Right"
+                              VerticalAlignment="Center"
+                              Width="30"
+                              Height="30" 
+                              RenderTransformOrigin="0.5,0.5"/>
+                        <TextBlock Grid.Column="1" 
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   FontSize="21"
+                                   Text="User"/>
                     </Grid>
                 </Button>
             </Grid>
