--- a/View/HistoryView.xaml
+++ b/View/HistoryView.xaml
@@ -1,42 +1,90 @@
-﻿<Page x:Class="PinusPengger.View.HistoryView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PinusPengger.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="540" d:DesignWidth="960"
-      Title="HistoryView">
-
+﻿<UserControl x:Class="PinusPengger.Controller.HistoryController"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:controller="clr-namespace:PinusPengger.Controller"
+             xmlns:model="clr-namespace:PinusPengger.Model"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:converter="clr-namespace:PinusPengger.Controller.Converter"
+             mc:Ignorable="d" 
+             d:DesignHeight="420" 
+             d:DesignWidth="920"
+             Loaded="OnLoaded">
+    <UserControl.Resources>
+        <controller:Ticker x:Key="ticker"/>
+    </UserControl.Resources>
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.4*"/>
-            <RowDefinition Height="0.2*"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="290"/>
+            <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.1*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="0.1*"/>
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="1" Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.5*"/>
-                <ColumnDefinition Width="0.1*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Label Grid.Column="0" Grid.Row="0" FontSize="14" FontWeight="Bold">Masukkan Code</Label>
-            <TextBox Grid.Column="0" Grid.Row="1" Text="D75X" FontSize="20" Margin="2,0,0,0"/>
-            <Button Grid.Column="1" Grid.Row="1">
-                <Path Data="{StaticResource MagnifyingGlassIcon}" Grid.Column="1" Stretch="Uniform"
-                      Fill="Black" Width="15" Height="15" 
-                      HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,1" />
-            </Button>
-        </Grid>
+        <Border Grid.Row="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock x:Name="jamSkrg"
+                       Grid.Column="0"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Text="{Binding Source={StaticResource ticker},Path=Now, Mode=OneWay, StringFormat='dd MMMM yyyy  hh:mm:ss' }"/>
+            </Grid>
+        </Border>
+        <StackPanel Grid.Row="2"
+                    Margin="5,0,0,0">
+            <TextBlock Text="Masukkan Kode:"
+                       FontWeight="Bold"/>
+            <StackPanel Height="30"
+                        Orientation="Horizontal">
+                <TextBox Width="200"
+                         Height="25"
+                         FontSize="18"
+                         Foreground="DarkGray"
+                         Text="Kode"/>
+                <Button Height="25"
+                        Width="40">
+                    <Path Data="{StaticResource MagnifyingGlassIcon}"
+                          Grid.Column="1"
+                          Stretch="Uniform"
+                          Fill="Black"
+                          Width="15"
+                          Height="15"
+                          HorizontalAlignment="Center"
+                          VerticalAlignment="Center"
+                          Margin="0,0,0,1" />
+                </Button>
+            </StackPanel>
+        </StackPanel>
+        <DataGrid x:Name="tabelHistori"
+                  Margin="10"
+                  Height="290"
+                  AutoGenerateColumns="False"
+                  Grid.Row="3"
+                  CanUserAddRows="True">
+            <DataGrid.Resources>
+                <converter:PersonConverter x:Key="PersonConverter"/>
+                <converter:RoomConverter x:Key="RoomConverter"/>
+            </DataGrid.Resources>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Kode Pemesanan" 
+                                    Binding="{Binding KodePemesanan}"/>
+                <DataGridTextColumn Header="Nama" Width="200" 
+                                    Binding="{Binding Person,Converter={StaticResource PersonConverter}}"/>
+                <DataGridTextColumn Header="Nomor Kamar" Width="*"  
+                                    Binding="{Binding Room, Converter={StaticResource RoomConverter}}"/>
+                <DataGridTextColumn Header="Tanggal Checkin" Width="*" 
+                                    Binding="{Binding CheckIn, StringFormat='dd/MM/yyyy'}"/>
+                <DataGridTextColumn Header="Tanggal Checkout" Width="*"  
+                                    Binding="{Binding CheckOut, StringFormat='dd/MM/yyyy'}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</Page>
+</UserControl>
