--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -21,26 +21,75 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="75"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="3" HorizontalAlignment="Right"
-                    VerticalAlignment="Top" Margin="0,5,5,0"
-                    Orientation="Horizontal" FlowDirection="LeftToRight">
-            <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
-                    Background="Gold" Margin="0,0,5,0" BorderThickness="0" Click="MinimizeApp">
+        <StackPanel Grid.Column="3"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top" 
+                        Margin="0,5,5,0"
+                        Orientation="Horizontal" 
+                        FlowDirection="LeftToRight">
+            <Button Width="18"
+                        Height="18"
+                        Background="LimeGreen"
+                        Margin="0,0,5,0"
+                        BorderThickness="0"
+                        Click="MinimizeApp">
                 <Grid>
-                    <Path Data="{StaticResource MinimizeIcon}" Stretch="Uniform"
-                          Fill="Black" Width="10" Height="10"
-                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5" Margin="1,0,0,0"></Path>
+                    <Path Data="{StaticResource MinimizeIcon}"
+                              Stretch="Uniform"
+                              Fill="Black"
+                              Width="10" 
+                              Height="10"
+                              HorizontalAlignment="Center" 
+                              VerticalAlignment="Center"
+                              RenderTransformOrigin="0.5,0.5" 
+                              Margin="1,0,0,0"></Path>
                 </Grid>
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="32" />
+                            </Style>
+                        </Style.Resources>
+                        <Setter Property="Cursor" Value="Hand"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Lime"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
             </Button>
-            <Button Width="18" Height="18" Style="{StaticResource RoundedButton}"
-                    Background="Red" BorderThickness="0" Click="CloseApp">
+            <Button Width="18"
+                        Height="18"
+                        Background="Red"
+                        BorderThickness="0"
+                        Click="CloseApp">
                 <Grid>
-                    <Path Data="{StaticResource CloseAppIcon}" Stretch="Uniform"
-                          Fill="Black" Width="10" Height="10"
-                          HorizontalAlignment="Center" VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5" Margin="2,0,0,0"></Path>
+                    <Path Data="{StaticResource CloseAppIcon}" 
+                              Stretch="Uniform"
+                              Fill="Black"
+                              Width="10" 
+                              Height="10"
+                              HorizontalAlignment="Center" 
+                              VerticalAlignment="Center"
+                              RenderTransformOrigin="0.5,0.5"
+                              Margin="2,0,0,0"></Path>
                 </Grid>
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="32" />
+                            </Style>
+                        </Style.Resources>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Tomato"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
             </Button>
         </StackPanel>
         <Border Grid.Column="2" Grid.Row="2" BorderBrush="Black" BorderThickness="1" 
